grammar/parser.output
Terminals which are not used

   KW_ALIGNOF
   KW_AUTO_TYPE
   KW_EXTENSION
   LSHIFT
   RSHIFT
   '?'
   '|'
   '^'
   '!'
   '~'


Rules never reduced

   46 declarator_opt: declarator

   65 parameter_type_list_opt: /* empty */


State 37 conflicts: 2 shift/reduce, 2 reduce/reduce
State 45 conflicts: 1 shift/reduce, 2 reduce/reduce
State 67 conflicts: 17 reduce/reduce
State 109 conflicts: 2 shift/reduce
State 110 conflicts: 1 shift/reduce
State 112 conflicts: 3 shift/reduce
State 115 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 202 conflicts: 1 reduce/reduce
State 380 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: /* empty */
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration ';'
    5                     | static_assert_declaration

    6 declaration: declaration_specifiers declarator_opt
    7            | declaration_specifiers init_declarator_list

    8 declaration_specifiers: declaration_specifier
    9                       | declaration_specifiers declaration_specifier

   10 declaration_specifier: storage_class_specifier
   11                      | type_specifier
   12                      | type_qualifier
   13                      | function_specifier
   14                      | alignment_specifier
   15                      | attribute_specifier
   16                      | declspec_specifier

   17 storage_class_specifier: KW_TYPEDEF
   18                        | KW_EXTERN
   19                        | KW_STATIC
   20                        | KW_THREAD_LOCAL
   21                        | KW_AUTO
   22                        | KW_REGISTER

   23 type_qualifier: KW_CONST
   24               | KW_VOLATILE
   25               | KW_RESTRICT
   26               | KW_ATOMIC

   27 function_specifier: KW_INLINE
   28                   | KW_NORETURN

   29 alignment_specifier: KW_ALIGNAS '(' type_specifier ')'
   30                    | KW_ALIGNAS '(' INTEGER_CONSTANT ')'

   31 attribute_specifier: KW_ATTRIBUTE '(' attribute_arg_list_opt ')'

   32 declspec_specifier: KW_DECLSPEC '(' attribute_arg_list_opt ')'

   33 attribute_arg_list_opt: /* empty */
   34                       | attribute_arg_list

   35 attribute_arg_list: attribute_arg
   36                   | attribute_arg_list ',' attribute_arg

   37 attribute_arg: IDENTIFIER
   38              | STRING_LITERAL
   39              | INTEGER_CONSTANT
   40              | '(' attribute_arg_list_opt ')'

   41 init_declarator_list: init_declarator
   42                     | init_declarator_list ',' init_declarator

   43 init_declarator: declarator
   44                | declarator '=' initializer

   45 declarator_opt: /* empty */
   46               | declarator

   47 declarator: pointer_opt direct_declarator

   48 pointer_opt: /* empty */
   49            | pointer

   50 pointer: '*'
   51        | '*' type_qualifier_list
   52        | '*' pointer
   53        | '*' type_qualifier_list pointer

   54 type_qualifier_list: type_qualifier
   55                    | type_qualifier_list type_qualifier

   56 direct_declarator: IDENTIFIER
   57                  | '(' declarator ')'
   58                  | direct_declarator '[' assignment_expression_opt ']'
   59                  | direct_declarator '(' parameter_type_list_opt ')'
   60                  | direct_declarator '(' identifier_list_opt ')'

   61 identifier_list_opt: /* empty */
   62                    | identifier_list

   63 identifier_list: IDENTIFIER
   64                | identifier_list ',' IDENTIFIER

   65 parameter_type_list_opt: /* empty */
   66                        | parameter_type_list

   67 parameter_type_list: parameter_list
   68                    | parameter_list ',' ELLIPSIS

   69 parameter_list: parameter_declaration
   70               | parameter_list ',' parameter_declaration

   71 parameter_declaration: declaration_specifiers declarator
   72                      | declaration_specifiers

   73 type_specifier: KW_VOID
   74               | KW_CHAR
   75               | KW_SHORT
   76               | KW_INT
   77               | KW_LONG
   78               | KW_FLOAT
   79               | KW_DOUBLE
   80               | KW_SIGNED
   81               | KW_UNSIGNED
   82               | KW_BOOL
   83               | KW_COMPLEX
   84               | KW_IMAGINARY
   85               | struct_or_union_specifier
   86               | enum_specifier
   87               | KW_TYPEOF '(' type_specifier ')'

   88 specifier_qualifier_list: type_specifier
   89                         | type_qualifier
   90                         | specifier_qualifier_list type_specifier
   91                         | specifier_qualifier_list type_qualifier

   92 struct_or_union_specifier: KW_STRUCT IDENTIFIER
   93                          | KW_UNION IDENTIFIER
   94                          | KW_STRUCT '{' struct_declaration_list '}'
   95                          | KW_UNION '{' struct_declaration_list '}'
   96                          | KW_STRUCT IDENTIFIER '{' struct_declaration_list '}'
   97                          | KW_UNION IDENTIFIER '{' struct_declaration_list '}'

   98 struct_declaration_list: struct_declaration
   99                        | struct_declaration_list struct_declaration

  100 struct_declaration: specifier_qualifier_list struct_declarator_list ';'
  101                   | static_assert_declaration

  102 struct_declarator_list: struct_declarator
  103                       | struct_declarator_list ',' struct_declarator

  104 struct_declarator: declarator
  105                  | ':' constant_expression
  106                  | declarator ':' constant_expression

  107 enum_specifier: KW_ENUM IDENTIFIER
  108               | KW_ENUM '{' enumerator_list_opt '}'
  109               | KW_ENUM IDENTIFIER '{' enumerator_list_opt '}'

  110 enumerator_list_opt: /* empty */
  111                    | enumerator_list

  112 enumerator_list: enumerator
  113                | enumerator_list ',' enumerator
  114                | enumerator_list ','

  115 enumerator: IDENTIFIER
  116           | IDENTIFIER '=' constant_expression

  117 function_definition: type_specifier declarator compound_statement

  118 compound_statement: '{' block_item_list_opt '}'

  119 block_item_list_opt: /* empty */
  120                    | block_item_list

  121 block_item_list: block_item
  122                | block_item_list block_item

  123 block_item: declaration ';'
  124           | statement

  125 asm_statement: KW_ASM asm_qualifiers_opt '(' asm_arguments ')' ';'

  126 asm_qualifiers_opt: /* empty */
  127                   | asm_qualifiers_opt KW_VOLATILE
  128                   | asm_qualifiers_opt KW_INLINE
  129                   | asm_qualifiers_opt KW_GOTO

  130 asm_arguments: string_seq
  131              | string_seq ':' asm_output_operands_opt
  132              | string_seq ':' asm_output_operands_opt ':' asm_input_operands_opt
  133              | string_seq ':' asm_output_operands_opt ':' asm_input_operands_opt ':' asm_clobbers_opt
  134              | string_seq ':' asm_output_operands_opt ':' asm_input_operands_opt ':' asm_clobbers_opt ':' asm_goto_labels_opt

  135 asm_output_operands_opt: /* empty */
  136                        | asm_output_operands

  137 asm_input_operands_opt: /* empty */
  138                       | asm_input_operands

  139 asm_clobbers_opt: /* empty */
  140                 | asm_clobbers

  141 asm_goto_labels_opt: /* empty */
  142                    | asm_goto_labels

  143 asm_output_operands: asm_output_operand
  144                    | asm_output_operands ',' asm_output_operand

  145 asm_input_operands: asm_input_operand
  146                   | asm_input_operands ',' asm_input_operand

  147 asm_output_operand: asm_symbolic_name_opt STRING_LITERAL '(' unary_expression ')'

  148 asm_input_operand: asm_symbolic_name_opt STRING_LITERAL '(' assignment_expression ')'

  149 asm_symbolic_name_opt: /* empty */
  150                      | '[' IDENTIFIER ']'

  151 asm_clobbers: STRING_LITERAL
  152             | asm_clobbers ',' STRING_LITERAL

  153 asm_goto_labels: IDENTIFIER
  154                | asm_goto_labels ',' IDENTIFIER

  155 static_assert_declaration: KW_STATIC_ASSERT '(' conditional_expression ',' STRING_LITERAL ')' ';'

  156 statement: ';'
  157          | expression ';'
  158          | KW_RETURN expression_opt ';'
  159          | compound_statement
  160          | labeled_statement
  161          | KW_IF '(' expression ')' statement
  162          | KW_IF '(' expression ')' statement KW_ELSE statement
  163          | KW_WHILE '(' expression ')' statement
  164          | KW_DO statement KW_WHILE '(' expression ')' ';'
  165          | KW_FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
  166          | KW_FOR '(' declaration expression_opt ';' expression_opt ')' statement
  167          | KW_SWITCH '(' expression ')' statement
  168          | KW_BREAK ';'
  169          | KW_CONTINUE ';'
  170          | KW_GOTO IDENTIFIER ';'
  171          | asm_statement

  172 labeled_statement: IDENTIFIER ':' statement
  173                  | KW_CASE constant_expression ':' statement
  174                  | KW_DEFAULT ':' statement

  175 expression_opt: /* empty */
  176               | expression

  177 expression: assignment_expression

  178 assignment_expression: conditional_expression
  179                      | unary_expression '=' assignment_expression
  180                      | unary_expression ADD_ASSIGN assignment_expression
  181                      | unary_expression SUB_ASSIGN assignment_expression
  182                      | unary_expression MUL_ASSIGN assignment_expression
  183                      | unary_expression DIV_ASSIGN assignment_expression
  184                      | unary_expression MOD_ASSIGN assignment_expression
  185                      | unary_expression AND_ASSIGN assignment_expression
  186                      | unary_expression OR_ASSIGN assignment_expression
  187                      | unary_expression XOR_ASSIGN assignment_expression
  188                      | unary_expression LSHIFT_ASSIGN assignment_expression
  189                      | unary_expression RSHIFT_ASSIGN assignment_expression

  190 conditional_expression: logical_or_expression

  191 logical_or_expression: logical_and_expression
  192                      | logical_or_expression LOGOR logical_and_expression

  193 logical_and_expression: equality_expression
  194                       | logical_and_expression LOGAND equality_expression

  195 equality_expression: relational_expression
  196                    | equality_expression EQ relational_expression
  197                    | equality_expression NE relational_expression

  198 relational_expression: additive_expression
  199                      | relational_expression '<' additive_expression
  200                      | relational_expression '>' additive_expression
  201                      | relational_expression LE additive_expression
  202                      | relational_expression GE additive_expression

  203 additive_expression: multiplicative_expression
  204                    | additive_expression '+' multiplicative_expression
  205                    | additive_expression '-' multiplicative_expression

  206 multiplicative_expression: unary_expression
  207                          | multiplicative_expression '*' unary_expression
  208                          | multiplicative_expression '/' unary_expression
  209                          | multiplicative_expression '%' unary_expression

  210 unary_expression: postfix_expression
  211                 | INC unary_expression
  212                 | DEC unary_expression
  213                 | '&' unary_expression
  214                 | '*' unary_expression
  215                 | '+' unary_expression
  216                 | '-' unary_expression
  217                 | KW_SIZEOF unary_expression
  218                 | KW_SIZEOF '(' type_specifier ')'
  219                 | KW_TYPEOF '(' expression ')'

  220 postfix_expression: primary_expression
  221                   | postfix_expression '(' argument_expression_list_opt ')'
  222                   | postfix_expression INC
  223                   | postfix_expression DEC
  224                   | postfix_expression '[' expression ']'
  225                   | postfix_expression '.' IDENTIFIER
  226                   | postfix_expression ARROW IDENTIFIER
  227                   | KW_GENERIC '(' assignment_expression ',' assignment_expression ')'

  228 argument_expression_list_opt: /* empty */
  229                             | argument_expression_list

  230 argument_expression_list: assignment_expression
  231                         | argument_expression_list ',' assignment_expression

  232 primary_expression: IDENTIFIER
  233                   | constant
  234                   | string_seq
  235                   | '(' expression ')'
  236                   | LPAREN_BRACE compound_statement ')'

  237 constant: INTEGER_CONSTANT
  238         | FLOAT_CONSTANT
  239         | CHAR_CONSTANT

  240 string_seq: STRING_LITERAL
  241           | string_seq STRING_LITERAL

  242 assignment_expression_opt: /* empty */
  243                          | assignment_expression

  244 initializer: assignment_expression
  245            | '{' initializer_list '}'
  246            | '{' initializer_list ',' '}'

  247 initializer_list: designation_opt initializer
  248                 | initializer_list ',' designation_opt initializer

  249 designation_opt: /* empty */
  250                | designation

  251 designation: designator_list '='

  252 designator_list: designator
  253                | designator_list designator

  254 designator: '.' IDENTIFIER
  255           | '[' constant_expression ']'

  256 constant_expression: conditional_expression


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37) 209
'&' (38) 213
'(' (40) 29 30 31 32 40 57 59 60 87 125 147 148 155 161 162 163 164
    165 166 167 218 219 221 227 235
')' (41) 29 30 31 32 40 57 59 60 87 125 147 148 155 161 162 163 164
    165 166 167 218 219 221 227 235 236
'*' (42) 50 51 52 53 207 214
'+' (43) 204 215
',' (44) 36 42 64 68 70 103 113 114 144 146 152 154 155 227 231 246
    248
'-' (45) 205 216
'.' (46) 225 254
'/' (47) 208
':' (58) 105 106 131 132 133 134 172 173 174
';' (59) 4 100 123 125 155 156 157 158 164 165 166 168 169 170
'<' (60) 199
'=' (61) 44 116 179 251
'>' (62) 200
'?' (63)
'[' (91) 58 150 224 255
']' (93) 58 150 224 255
'^' (94)
'{' (123) 94 95 96 97 108 109 118 245 246
'|' (124)
'}' (125) 94 95 96 97 108 109 118 245 246
'~' (126)
error (256)
IDENTIFIER (258) 37 56 63 64 92 93 96 97 107 109 115 116 150 153 154
    170 172 225 226 232 254
STRING_LITERAL (259) 38 147 148 151 152 155 240 241
INTEGER_CONSTANT (260) 30 39 237
FLOAT_CONSTANT (261) 238
CHAR_CONSTANT (262) 239
KW_INT (263) 76
KW_CHAR (264) 74
KW_VOID (265) 73
KW_FLOAT (266) 78
KW_DOUBLE (267) 79
KW_SHORT (268) 75
KW_LONG (269) 77
KW_SIGNED (270) 80
KW_UNSIGNED (271) 81
KW_BOOL (272) 82
KW_COMPLEX (273) 83
KW_IMAGINARY (274) 84
KW_STRUCT (275) 92 94 96
KW_UNION (276) 93 95 97
KW_ENUM (277) 107 108 109
KW_TYPEDEF (278) 17
KW_RETURN (279) 158
KW_IF (280) 161 162
KW_ELSE (281) 162
KW_WHILE (282) 163 164
KW_FOR (283) 165 166
KW_DO (284) 164
KW_SWITCH (285) 167
KW_CASE (286) 173
KW_DEFAULT (287) 174
KW_BREAK (288) 168
KW_CONTINUE (289) 169
KW_GOTO (290) 129 170
KW_SIZEOF (291) 217 218
KW_ALIGNAS (292) 29 30
KW_ALIGNOF (293)
KW_NORETURN (294) 28
KW_THREAD_LOCAL (295) 20
KW_ATOMIC (296) 26
KW_CONST (297) 23
KW_VOLATILE (298) 24 127
KW_RESTRICT (299) 25
KW_INLINE (300) 27 128
KW_EXTERN (301) 18
KW_STATIC (302) 19
KW_REGISTER (303) 22
KW_AUTO (304) 21
KW_STATIC_ASSERT (305) 155
KW_GENERIC (306) 227
KW_TYPEOF (307) 87 219
KW_AUTO_TYPE (308)
KW_ATTRIBUTE (309) 31
KW_DECLSPEC (310) 32
KW_EXTENSION (311)
KW_ASM (312) 125
ELLIPSIS (313) 68
ARROW (314) 226
INC (315) 211 222
DEC (316) 212 223
LSHIFT (317)
RSHIFT (318)
LE (319) 201
GE (320) 202
EQ (321) 196
NE (322) 197
LOGAND (323) 194
LOGOR (324) 192
ADD_ASSIGN (325) 180
SUB_ASSIGN (326) 181
MUL_ASSIGN (327) 182
DIV_ASSIGN (328) 183
MOD_ASSIGN (329) 184
AND_ASSIGN (330) 185
OR_ASSIGN (331) 186
XOR_ASSIGN (332) 187
LSHIFT_ASSIGN (333) 188
RSHIFT_ASSIGN (334) 189
LPAREN_BRACE (335) 236


Nonterminals, with rules where they appear

$accept (105)
    on left: 0
translation_unit (106)
    on left: 1 2, on right: 0 2
external_declaration (107)
    on left: 3 4 5, on right: 2
declaration (108)
    on left: 6 7, on right: 4 123 166
declaration_specifiers (109)
    on left: 8 9, on right: 6 7 9 71 72
declaration_specifier (110)
    on left: 10 11 12 13 14 15 16, on right: 8 9
storage_class_specifier (111)
    on left: 17 18 19 20 21 22, on right: 10
type_qualifier (112)
    on left: 23 24 25 26, on right: 12 54 55 89 91
function_specifier (113)
    on left: 27 28, on right: 13
alignment_specifier (114)
    on left: 29 30, on right: 14
attribute_specifier (115)
    on left: 31, on right: 15
declspec_specifier (116)
    on left: 32, on right: 16
attribute_arg_list_opt (117)
    on left: 33 34, on right: 31 32 40
attribute_arg_list (118)
    on left: 35 36, on right: 34 36
attribute_arg (119)
    on left: 37 38 39 40, on right: 35 36
init_declarator_list (120)
    on left: 41 42, on right: 7 42
init_declarator (121)
    on left: 43 44, on right: 41 42
declarator_opt (122)
    on left: 45 46, on right: 6
declarator (123)
    on left: 47, on right: 43 44 46 57 71 104 106 117
pointer_opt (124)
    on left: 48 49, on right: 47
pointer (125)
    on left: 50 51 52 53, on right: 49 52 53
type_qualifier_list (126)
    on left: 54 55, on right: 51 53 55
direct_declarator (127)
    on left: 56 57 58 59 60, on right: 47 58 59 60
identifier_list_opt (128)
    on left: 61 62, on right: 60
identifier_list (129)
    on left: 63 64, on right: 62 64
parameter_type_list_opt (130)
    on left: 65 66, on right: 59
parameter_type_list (131)
    on left: 67 68, on right: 66
parameter_list (132)
    on left: 69 70, on right: 67 68 70
parameter_declaration (133)
    on left: 71 72, on right: 69 70
type_specifier (134)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87,
    on right: 11 29 87 88 90 117 218
specifier_qualifier_list (135)
    on left: 88 89 90 91, on right: 90 91 100
struct_or_union_specifier (136)
    on left: 92 93 94 95 96 97, on right: 85
struct_declaration_list (137)
    on left: 98 99, on right: 94 95 96 97 99
struct_declaration (138)
    on left: 100 101, on right: 98 99
struct_declarator_list (139)
    on left: 102 103, on right: 100 103
struct_declarator (140)
    on left: 104 105 106, on right: 102 103
enum_specifier (141)
    on left: 107 108 109, on right: 86
enumerator_list_opt (142)
    on left: 110 111, on right: 108 109
enumerator_list (143)
    on left: 112 113 114, on right: 111 113 114
enumerator (144)
    on left: 115 116, on right: 112 113
function_definition (145)
    on left: 117, on right: 3
compound_statement (146)
    on left: 118, on right: 117 159 236
block_item_list_opt (147)
    on left: 119 120, on right: 118
block_item_list (148)
    on left: 121 122, on right: 120 122
block_item (149)
    on left: 123 124, on right: 121 122
asm_statement (150)
    on left: 125, on right: 171
asm_qualifiers_opt (151)
    on left: 126 127 128 129, on right: 125 127 128 129
asm_arguments (152)
    on left: 130 131 132 133 134, on right: 125
asm_output_operands_opt (153)
    on left: 135 136, on right: 131 132 133 134
asm_input_operands_opt (154)
    on left: 137 138, on right: 132 133 134
asm_clobbers_opt (155)
    on left: 139 140, on right: 133 134
asm_goto_labels_opt (156)
    on left: 141 142, on right: 134
asm_output_operands (157)
    on left: 143 144, on right: 136 144
asm_input_operands (158)
    on left: 145 146, on right: 138 146
asm_output_operand (159)
    on left: 147, on right: 143 144
asm_input_operand (160)
    on left: 148, on right: 145 146
asm_symbolic_name_opt (161)
    on left: 149 150, on right: 147 148
asm_clobbers (162)
    on left: 151 152, on right: 140 152
asm_goto_labels (163)
    on left: 153 154, on right: 142 154
static_assert_declaration (164)
    on left: 155, on right: 5 101
statement (165)
    on left: 156 157 158 159 160 161 162 163 164 165 166 167 168 169
    170 171, on right: 124 161 162 163 164 165 166 167 172 173 174
labeled_statement (166)
    on left: 172 173 174, on right: 160
expression_opt (167)
    on left: 175 176, on right: 158 165 166
expression (168)
    on left: 177, on right: 157 161 162 163 164 167 176 219 224 235
assignment_expression (169)
    on left: 178 179 180 181 182 183 184 185 186 187 188 189,
    on right: 148 177 179 180 181 182 183 184 185 186 187 188 189 227
    230 231 243 244
conditional_expression (170)
    on left: 190, on right: 155 178 256
logical_or_expression (171)
    on left: 191 192, on right: 190 192
logical_and_expression (172)
    on left: 193 194, on right: 191 192 194
equality_expression (173)
    on left: 195 196 197, on right: 193 194 196 197
relational_expression (174)
    on left: 198 199 200 201 202, on right: 195 196 197 199 200 201
    202
additive_expression (175)
    on left: 203 204 205, on right: 198 199 200 201 202 204 205
multiplicative_expression (176)
    on left: 206 207 208 209, on right: 203 204 205 207 208 209
unary_expression (177)
    on left: 210 211 212 213 214 215 216 217 218 219,
    on right: 147 179 180 181 182 183 184 185 186 187 188 189 206 207
    208 209 211 212 213 214 215 216 217
postfix_expression (178)
    on left: 220 221 222 223 224 225 226 227, on right: 210 221 222
    223 224 225 226
argument_expression_list_opt (179)
    on left: 228 229, on right: 221
argument_expression_list (180)
    on left: 230 231, on right: 229 231
primary_expression (181)
    on left: 232 233 234 235 236, on right: 220
constant (182)
    on left: 237 238 239, on right: 233
string_seq (183)
    on left: 240 241, on right: 130 131 132 133 134 234 241
assignment_expression_opt (184)
    on left: 242 243, on right: 58
initializer (185)
    on left: 244 245 246, on right: 44 247 248
initializer_list (186)
    on left: 247 248, on right: 245 246 248
designation_opt (187)
    on left: 249 250, on right: 247 248
designation (188)
    on left: 251, on right: 250
designator_list (189)
    on left: 252 253, on right: 251 253
designator (190)
    on left: 254 255, on right: 252 253
constant_expression (191)
    on left: 256, on right: 105 106 116 173 255


state 0

    0 $accept: . translation_unit $end

    $default  reduce using rule 1 (translation_unit)

    translation_unit  go to state 1


state 1

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end              shift, and go to state 2
    KW_INT            shift, and go to state 3
    KW_CHAR           shift, and go to state 4
    KW_VOID           shift, and go to state 5
    KW_FLOAT          shift, and go to state 6
    KW_DOUBLE         shift, and go to state 7
    KW_SHORT          shift, and go to state 8
    KW_LONG           shift, and go to state 9
    KW_SIGNED         shift, and go to state 10
    KW_UNSIGNED       shift, and go to state 11
    KW_BOOL           shift, and go to state 12
    KW_COMPLEX        shift, and go to state 13
    KW_IMAGINARY      shift, and go to state 14
    KW_STRUCT         shift, and go to state 15
    KW_UNION          shift, and go to state 16
    KW_ENUM           shift, and go to state 17
    KW_TYPEDEF        shift, and go to state 18
    KW_ALIGNAS        shift, and go to state 19
    KW_NORETURN       shift, and go to state 20
    KW_THREAD_LOCAL   shift, and go to state 21
    KW_ATOMIC         shift, and go to state 22
    KW_CONST          shift, and go to state 23
    KW_VOLATILE       shift, and go to state 24
    KW_RESTRICT       shift, and go to state 25
    KW_INLINE         shift, and go to state 26
    KW_EXTERN         shift, and go to state 27
    KW_STATIC         shift, and go to state 28
    KW_REGISTER       shift, and go to state 29
    KW_AUTO           shift, and go to state 30
    KW_STATIC_ASSERT  shift, and go to state 31
    KW_TYPEOF         shift, and go to state 32
    KW_ATTRIBUTE      shift, and go to state 33
    KW_DECLSPEC       shift, and go to state 34

    external_declaration       go to state 35
    declaration                go to state 36
    declaration_specifiers     go to state 37
    declaration_specifier      go to state 38
    storage_class_specifier    go to state 39
    type_qualifier             go to state 40
    function_specifier         go to state 41
    alignment_specifier        go to state 42
    attribute_specifier        go to state 43
    declspec_specifier         go to state 44
    type_specifier             go to state 45
    struct_or_union_specifier  go to state 46
    enum_specifier             go to state 47
    function_definition        go to state 48
    static_assert_declaration  go to state 49


state 2

    0 $accept: translation_unit $end .

    $default  accept


state 3

   76 type_specifier: KW_INT .

    $default  reduce using rule 76 (type_specifier)


state 4

   74 type_specifier: KW_CHAR .

    $default  reduce using rule 74 (type_specifier)


state 5

   73 type_specifier: KW_VOID .

    $default  reduce using rule 73 (type_specifier)


state 6

   78 type_specifier: KW_FLOAT .

    $default  reduce using rule 78 (type_specifier)


state 7

   79 type_specifier: KW_DOUBLE .

    $default  reduce using rule 79 (type_specifier)


state 8

   75 type_specifier: KW_SHORT .

    $default  reduce using rule 75 (type_specifier)


state 9

   77 type_specifier: KW_LONG .

    $default  reduce using rule 77 (type_specifier)


state 10

   80 type_specifier: KW_SIGNED .

    $default  reduce using rule 80 (type_specifier)


state 11

   81 type_specifier: KW_UNSIGNED .

    $default  reduce using rule 81 (type_specifier)


state 12

   82 type_specifier: KW_BOOL .

    $default  reduce using rule 82 (type_specifier)


state 13

   83 type_specifier: KW_COMPLEX .

    $default  reduce using rule 83 (type_specifier)


state 14

   84 type_specifier: KW_IMAGINARY .

    $default  reduce using rule 84 (type_specifier)


state 15

   92 struct_or_union_specifier: KW_STRUCT . IDENTIFIER
   94                          | KW_STRUCT . '{' struct_declaration_list '}'
   96                          | KW_STRUCT . IDENTIFIER '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 50
    '{'         shift, and go to state 51


state 16

   93 struct_or_union_specifier: KW_UNION . IDENTIFIER
   95                          | KW_UNION . '{' struct_declaration_list '}'
   97                          | KW_UNION . IDENTIFIER '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 52
    '{'         shift, and go to state 53


state 17

  107 enum_specifier: KW_ENUM . IDENTIFIER
  108               | KW_ENUM . '{' enumerator_list_opt '}'
  109               | KW_ENUM . IDENTIFIER '{' enumerator_list_opt '}'

    IDENTIFIER  shift, and go to state 54
    '{'         shift, and go to state 55


state 18

   17 storage_class_specifier: KW_TYPEDEF .

    $default  reduce using rule 17 (storage_class_specifier)


state 19

   29 alignment_specifier: KW_ALIGNAS . '(' type_specifier ')'
   30                    | KW_ALIGNAS . '(' INTEGER_CONSTANT ')'

    '('  shift, and go to state 56


state 20

   28 function_specifier: KW_NORETURN .

    $default  reduce using rule 28 (function_specifier)


state 21

   20 storage_class_specifier: KW_THREAD_LOCAL .

    $default  reduce using rule 20 (storage_class_specifier)


state 22

   26 type_qualifier: KW_ATOMIC .

    $default  reduce using rule 26 (type_qualifier)


state 23

   23 type_qualifier: KW_CONST .

    $default  reduce using rule 23 (type_qualifier)


state 24

   24 type_qualifier: KW_VOLATILE .

    $default  reduce using rule 24 (type_qualifier)


state 25

   25 type_qualifier: KW_RESTRICT .

    $default  reduce using rule 25 (type_qualifier)


state 26

   27 function_specifier: KW_INLINE .

    $default  reduce using rule 27 (function_specifier)


state 27

   18 storage_class_specifier: KW_EXTERN .

    $default  reduce using rule 18 (storage_class_specifier)


state 28

   19 storage_class_specifier: KW_STATIC .

    $default  reduce using rule 19 (storage_class_specifier)


state 29

   22 storage_class_specifier: KW_REGISTER .

    $default  reduce using rule 22 (storage_class_specifier)


state 30

   21 storage_class_specifier: KW_AUTO .

    $default  reduce using rule 21 (storage_class_specifier)


state 31

  155 static_assert_declaration: KW_STATIC_ASSERT . '(' conditional_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 57


state 32

   87 type_specifier: KW_TYPEOF . '(' type_specifier ')'

    '('  shift, and go to state 58


state 33

   31 attribute_specifier: KW_ATTRIBUTE . '(' attribute_arg_list_opt ')'

    '('  shift, and go to state 59


state 34

   32 declspec_specifier: KW_DECLSPEC . '(' attribute_arg_list_opt ')'

    '('  shift, and go to state 60


state 35

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 36

    4 external_declaration: declaration . ';'

    ';'  shift, and go to state 61


state 37

    6 declaration: declaration_specifiers . declarator_opt
    7            | declaration_specifiers . init_declarator_list
    9 declaration_specifiers: declaration_specifiers . declaration_specifier

    KW_INT           shift, and go to state 3
    KW_CHAR          shift, and go to state 4
    KW_VOID          shift, and go to state 5
    KW_FLOAT         shift, and go to state 6
    KW_DOUBLE        shift, and go to state 7
    KW_SHORT         shift, and go to state 8
    KW_LONG          shift, and go to state 9
    KW_SIGNED        shift, and go to state 10
    KW_UNSIGNED      shift, and go to state 11
    KW_BOOL          shift, and go to state 12
    KW_COMPLEX       shift, and go to state 13
    KW_IMAGINARY     shift, and go to state 14
    KW_STRUCT        shift, and go to state 15
    KW_UNION         shift, and go to state 16
    KW_ENUM          shift, and go to state 17
    KW_TYPEDEF       shift, and go to state 18
    KW_ALIGNAS       shift, and go to state 19
    KW_NORETURN      shift, and go to state 20
    KW_THREAD_LOCAL  shift, and go to state 21
    KW_ATOMIC        shift, and go to state 22
    KW_CONST         shift, and go to state 23
    KW_VOLATILE      shift, and go to state 24
    KW_RESTRICT      shift, and go to state 25
    KW_INLINE        shift, and go to state 26
    KW_EXTERN        shift, and go to state 27
    KW_STATIC        shift, and go to state 28
    KW_REGISTER      shift, and go to state 29
    KW_AUTO          shift, and go to state 30
    KW_TYPEOF        shift, and go to state 32
    KW_ATTRIBUTE     shift, and go to state 33
    KW_DECLSPEC      shift, and go to state 34
    '*'              shift, and go to state 62

    IDENTIFIER  reduce using rule 45 (declarator_opt)
    IDENTIFIER  [reduce using rule 48 (pointer_opt)]
    KW_TYPEOF   [reduce using rule 45 (declarator_opt)]
    '*'         [reduce using rule 45 (declarator_opt)]
    '('         reduce using rule 45 (declarator_opt)
    '('         [reduce using rule 48 (pointer_opt)]
    $default    reduce using rule 45 (declarator_opt)

    declaration_specifier      go to state 63
    storage_class_specifier    go to state 39
    type_qualifier             go to state 40
    function_specifier         go to state 41
    alignment_specifier        go to state 42
    attribute_specifier        go to state 43
    declspec_specifier         go to state 44
    init_declarator_list       go to state 64
    init_declarator            go to state 65
    declarator_opt             go to state 66
    declarator                 go to state 67
    pointer_opt                go to state 68
    pointer                    go to state 69
    type_specifier             go to state 70
    struct_or_union_specifier  go to state 46
    enum_specifier             go to state 47


state 38

    8 declaration_specifiers: declaration_specifier .

    $default  reduce using rule 8 (declaration_specifiers)


state 39

   10 declaration_specifier: storage_class_specifier .

    $default  reduce using rule 10 (declaration_specifier)


state 40

   12 declaration_specifier: type_qualifier .

    $default  reduce using rule 12 (declaration_specifier)


state 41

   13 declaration_specifier: function_specifier .

    $default  reduce using rule 13 (declaration_specifier)


state 42

   14 declaration_specifier: alignment_specifier .

    $default  reduce using rule 14 (declaration_specifier)


state 43

   15 declaration_specifier: attribute_specifier .

    $default  reduce using rule 15 (declaration_specifier)


state 44

   16 declaration_specifier: declspec_specifier .

    $default  reduce using rule 16 (declaration_specifier)


state 45

   11 declaration_specifier: type_specifier .
  117 function_definition: type_specifier . declarator compound_statement

    '*'  shift, and go to state 62

    IDENTIFIER  reduce using rule 11 (declaration_specifier)
    IDENTIFIER  [reduce using rule 48 (pointer_opt)]
    '*'         [reduce using rule 11 (declaration_specifier)]
    '('         reduce using rule 11 (declaration_specifier)
    '('         [reduce using rule 48 (pointer_opt)]
    $default    reduce using rule 11 (declaration_specifier)

    declarator   go to state 71
    pointer_opt  go to state 68
    pointer      go to state 69


state 46

   85 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 85 (type_specifier)


state 47

   86 type_specifier: enum_specifier .

    $default  reduce using rule 86 (type_specifier)


state 48

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


state 49

    5 external_declaration: static_assert_declaration .

    $default  reduce using rule 5 (external_declaration)


state 50

   92 struct_or_union_specifier: KW_STRUCT IDENTIFIER .
   96                          | KW_STRUCT IDENTIFIER . '{' struct_declaration_list '}'

    '{'  shift, and go to state 72

    $default  reduce using rule 92 (struct_or_union_specifier)


state 51

   94 struct_or_union_specifier: KW_STRUCT '{' . struct_declaration_list '}'
